# Copyright (c) 2013-2019 Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020-2021 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
# conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
# of conditions and the following disclaimer in the documentation and/or other materials
# provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
# to endorse or promote products derived from this software without specific prior written
# permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

LOSCFG_USER_TEST_FOR_DOOR = true
LOSCFG_USER_TEST_FOR_ALL = false
LOSCFG_USER_TEST_PRESSURE = false

# "default": depend on board_name
# "enable": those testsuites testing for SMP is enable
# "disable" those testsuites is disable
LOSCFG_USER_TEST_SMP = "default"

LOSCFG_USER_TEST_MISC = true
LOSCFG_USER_TEST_DRIVERS_HID = true
LOSCFG_USER_TEST_DRIVERS_STORAGE = true
LOSCFG_USER_TEST_DYNLOAD = true
LOSCFG_USER_TEST_EXC = true
LOSCFG_USER_TEST_FS_JFFS = false
LOSCFG_USER_TEST_FS_VFAT = false
LOSCFG_USER_TEST_IO = true
LOSCFG_USER_TEST_IPC = false
LOSCFG_USER_TEST_LITEIPC = false
LOSCFG_USER_TEST_MEM_VM = true
LOSCFG_USER_TEST_MEM_SHM = true
LOSCFG_USER_TEST_NET_NETDB = true
LOSCFG_USER_TEST_NET_RESOLV = true
LOSCFG_USER_TEST_NET_SOCKET = true
LOSCFG_USER_TEST_POSIX_PTHREAD = false
LOSCFG_USER_TEST_POSIX_MQUEUE = true
LOSCFG_USER_TEST_POSIX_MEM = true
LOSCFG_USER_TEST_SPINLOCK = true
LOSCFG_USER_TEST_RWLOCK = true
LOSCFG_USER_TEST_PTHREAD = false
LOSCFG_USER_TEST_PROCESS = false
LOSCFG_USER_TEST_MUTEX = true
LOSCFG_USER_TEST_SECURITY_CAPABILITY = true
LOSCFG_USER_TEST_SECURITY_VID = true
LOSCFG_USER_TEST_SECURITY_REUGID = true
LOSCFG_USER_TEST_SIGNAL = true
LOSCFG_USER_TEST_SYS = true
LOSCFG_USER_TEST_TIME_CLOCK = true 
LOSCFG_USER_TEST_TIME_TIMER = true
LOSCFG_USER_TEST_UTIL = true